feat: image mobile

--- a/src/components/MyTitle/MyTitle.scss
+++ b/src/components/MyTitle/MyTitle.scss
@@ -8,10 +8,11 @@
 }
 .size-60px {
     font-size: 60px;
+    margin: 0;
 }
 
 .size-30px{
     font-size: 30px;
-    margin-top: 50px;
+    margin: 0;
     margin-bottom: 0px;
 }
