--- a/src/components/MyInput/MyInput.scss
+++ b/src/components/MyInput/MyInput.scss
@@ -1,6 +1,6 @@
 .inputs{
     box-sizing: border-box;
-    width: 25vw;
+    width: 100%;
     height: 8vh;
     margin-top: 25px;
     border-radius: 50px;
@@ -17,9 +17,10 @@
 }
 
 .register{
-    width: 25vw;
+    width: 100%;
     height: 8vh;
-    margin-top: 33px;
+    margin-top: 4em;
+    margin-bottom:4em;
     border-radius: 50px;
     background: #ff2d04;
     border: none;
