--- a/src/views/PageLogin/PageLogin.scss
+++ b/src/views/PageLogin/PageLogin.scss
@@ -2,17 +2,23 @@
 .page-login {
     background: linear-gradient(180deg, #33383D 0%, #1C1D20 100%);
     display: flex;
-    
+    height: 100vh;
+    width: 100vw;
 }
 .date {
     width: 50%;
     display: flex;
     justify-content: center;
-    
 }
+.fundo{
+    display: flex;
+    justify-content: center;
+    width: 50vw;
+    background-size: cover;
+    background-image: url("@/assets/fundo.png");
+}
+
 .container {
-    // background-color: blue;
-    
     flex-direction: column;
     width: 60%;
 }
@@ -22,7 +28,6 @@
 .title {
     margin-top: 0.5em;
 }
-
 .img {
     width: 50%;
     display: flex;
