--- a/src/components/myText/myText.scss
+++ b/src/components/myText/myText.scss
@@ -1,12 +1,29 @@
-p {
-    
+p { 
     font-family: 'Poppins';
     font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #E0E0E0;
 }
 .size-16px {
     font-size: 16px;
+}
+.size-24px {
+    font-size: 24px;
+}
+.size-36px {
+    font-size: 36px;
+}
+.size-64px {
+    font-size: 64px;
+}
+#red-bold {
+    color:#C12D18;
+    font-weight: bold;
+    margin: 20px;
+}
+#black {
+    color: #000000;
+    font-weight: bold;
+    margin: 0 24px;
 }
