--- a/src/components/myText/myText.scss
+++ b/src/components/myText/myText.scss
@@ -5,8 +5,16 @@ p {
     line-height: 24px;
     color: #E0E0E0;
 }
+.size-13px {
+    font-size: 13px;
+    padding-left: 10%;
+    padding-right: 1%;
+}
 .size-16px {
     font-size: 16px;
+}
+.size-15px {
+    font-size: 15px;
 }
 .size-24px {
     font-size: 24px;
@@ -14,8 +22,11 @@ p {
 .size-36px {
     font-size: 36px;
 }
-.size-64px {
-    font-size: 64px;
+.size-40px {
+    font-size: 40px;
+}
+.size-20px {
+    font-size: 20px;
 }
 #red-bold {
     color:#C12D18;
