--- a/src/views/PageHome/PageHome.scss
+++ b/src/views/PageHome/PageHome.scss
@@ -35,22 +35,65 @@ h1{
 p{
     font-size: 1.5em;
     margin: 0;
+}
+.container{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }	
 .message{
     display: flex;
     flex-direction: column;
-    
     align-items: flex-end;
     // background-color: aqua;
-    margin-right: 4em;
-     margin-top: 4em;
-    
+    margin-right: 1em;
+    margin-top: 4em;
+    width: 50%;
+    height: 100%;
+}
+.image{
+    width: 50%;
 }
 img{
-    display: absolute;
-    width: 600px;
-    height: 600px;;
-    
- 
-
+  
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 15vh;
+    width: 100%;
+    background: linear-gradient(180deg, #33383D 0%, #1C1D20 100%);
+}
+.text1{
+    width: 50%;
+    border-right: 2px solid;
+    border-right-color: #ffffff; 
+}
+.text2{
+    width: 15%;
+}
+.text3{
+    width: 15%;
+}
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+}
+.button1 {
+    background-color: #ffffffd4;
+    width: 50%;
+    height: 15vh;
+    padding-top: 18%;
+    border: none;
+    cursor: pointer;
+}
+.button2 {
+    width: 50%;
+    height: 15vh;
+    padding-left: 30px;
+    padding-top: 25%;
+    cursor: pointer;
 }
