Feat: Page-Home css mobile

--- a/src/components/myText/myText.scss
+++ b/src/components/myText/myText.scss
@@ -31,10 +31,13 @@ p {
 #red-bold {
     color:#C12D18;
     font-weight: bold;
-    margin: 20px;
+
 }
 #black {
     color: #000000;
     font-weight: bold;
-    margin: 0 24px;
+}
+#black-bold {
+    color: #000000; 
+    font-weight: bold; 
 }
