--- a/src/components/myText/myText.scss
+++ b/src/components/myText/myText.scss
@@ -4,6 +4,7 @@ p {
     font-size: 16px;
     line-height: 24px;
     color: #E0E0E0;
+    user-select: none;
 }
 .size-13px {
     font-size: 13px;
