Feat:Created component Timer

--- a/src/views/PageHome/PageHome.scss
+++ b/src/views/PageHome/PageHome.scss
@@ -64,6 +64,12 @@ p{
         display: none;
     }
 }
+
+@media screen and (max-width: 1185px){
+    .text2{
+        display: none;
+    }
+}
 .item-message{
     margin-top: 10px;
 }
